add distance-based combat multipliers to warfare system

--- a/src/gamedata/configs/presets/warfare_alifeoverhaul_faster.ltx
+++ b/src/gamedata/configs/presets/warfare_alifeoverhaul_faster.ltx
@@ -57,6 +57,15 @@
 		alife/warfare/general/veteran_squad_price                 = 50000
         alife/warfare/general/zombie_mode                         = false
 		alife/warfare/general/zombies_act_as_faction              = true
+
+		; Distance-based combat multiplier settings
+        alife/warfare/general/distance_based_combat_multiplier    = true
+        alife/warfare/general/distance_combat_min_multiplier      = 0.5
+        alife/warfare/general/distance_combat_max_multiplier_base = 2
+        alife/warfare/general/distance_combat_max_multiplier_resource = 1.5
+        alife/warfare/general/distance_combat_max_multiplier_territory = 1
+        alife/warfare/general/distance_combat_max_multiplier_lair = 1
+        alife/warfare/general/distance_combat_max_distance        = 500
 		
 		alife/warfare/azazel/actor_faction_dist_mult              = 1
         alife/warfare/azazel/actor_faction_max_respawn_dist       = 0
